# openwrt_with_lean_packages

./: .config.bak  .config.newifi3  .config.phik2  .config.wndr4300  .gitmodules  feeds.conf.default  wndr4300.diff
.github/workflows/: wndr4300v1.yml
package/: lean
package/fumiama/: noddos
package/fumiama/cmoe/: Makefile
package/fumiama/glog/: Makefile
package/fumiama/gtest/: Makefile
package/fumiama/libsmd5/: Makefile
package/fumiama/libspb/: Makefile
package/fumiama/shttps/: Makefile
package/fumiama/simple-dict-server/: Makefile
package/fumiama/simple-dict-server/src/: CMakeLists.txt  simple-dict-server.c
package/fumiama/simple-kanban-server/: Makefile
package/fumiama/simple-kanban-server/src/: CMakeLists.txt  protobuf.c  simple-kanban-server.c  simple-protobuf.h
package/lean/luci-app-adbyby-plus/root/usr/share/adbyby/: adbybyupdate.sh  admem.sh  adupdate.sh
package/lean/luci-app-diskman/: Makefile
package/libs/ncurses/: Makefile
package/network/config/firewall/patches/: fullconenat.patch
